# multiChannelOSPModule

./: CMakeLists.txt~  README.md
examples/: #Histogram.cpp#  .#Histogram.cpp  CMakeLists.txt  CMakeLists.txt~  Histogram.cpp  Histogram.h  TransferFunctionWidget.cpp  TransferFunctionWidget.h  glfw_window.cpp~  glfw_window.h~  multi_variant.cpp  multivariant.cpp  multivariant.cpp~  stb_image.h  voxelGeneration.cpp  voxelGeneration.cpp~  voxelGeneration.h  voxelGeneration.h~
ospray/: CMakeLists.txt  CMakeLists.txt~  README.md  moduleInit.cpp~
ospray/examples/: CMakeLists.txt  Histogram.cpp  TransferFunctionWidget.cpp  multivariant.cpp  voxelGeneration.cpp
ospray/multivariant/: #Multivariant.cpp#  .#Multivariant.cpp  Multivariant.cpp  Multivariant.h  Multivariant.ih  Multivariant.ispc  MultivariantMaterial.ispc  lightAlpha.ispc  surfaces.ih  volumes.ih  volumes.ispc
ospray/ospray/: moduleInit.cpp
ospray/ospray/multivariant/: Multivariant.h  Multivariant.ih  Multivariant.ispc  MultivariantMaterial.cpp  MultivariantMaterial.h  MultivariantMaterial.ih  lightAlpha.ispc  surfaces.ispc  volumes.ispc
other_seg_analysis/: hist_clustering.ipynb
